feat: created ExtractDataUseCase class
