# packages/shared/src/openapi.json
@@ -929,7 +929,7 @@
         }
       }
     },
-    "/ai/extract-data/{filename}/{fileId}": {
+    "/ai/extract-data/{fileId}": {
       "get": {
         "summary": "Fetch data extracted from PDFs",
         "description": "Retrieves the data from the PDF file previously uploaded to bucket",
@@ -938,17 +938,10 @@
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
-            "name": "filename",
-            "in": "path",
-            "required": true,
-            "description": "The name of the file uploaded to R2",
-            "schema": { "type": "string" }
-          },
-          {
             "name": "fileId",
             "in": "path",
             "required": true,
-            "description": "The unique identifier for the file",
+            "description": "The unique identifier for the file in the bucket",
             "schema": { "type": "string", "format": "string" }
           }
         ],
